# sgdrfros

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.rst  Dockerfile  IFCB.Dockerfile  Makefile  NOTICE  changelog.html  contributing.html  dev.requirements.txt  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  sgdrf.html
.devcontainer/: Dockerfile  entrypoint.sh
.doctrees/: changelog.doctree  contributing.doctree  index.doctree  readme.doctree  sgdrf.doctree
.github/: changed_files.yml
.github/actions/lint/: action.yml  run.sh
.github/actions/test/: action.yml  run.sh
.github/workflows/: docker.yml  gh-pages.yml  release.yml  ros.yaml
_sources/: sgdrf.rst.txt
docs/: conf.py  index.rst
docs/autodoc/: sgdrf.rst  sgdrf.sgdrf.rst
sgdrf/: .gitignore  README.rst  package.xml  setup.cfg  setup.py
sgdrf/docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  sgdrf.rst
sgdrf/launch/: sgdrf_node_launch.py
sgdrf/sgdrf/: __init__.py  __main__.py  kernel.py  model.py  optimizer.py  subsample.py
sgdrf/test/: test_flake8.py  test_pep257.py
sgdrf_interfaces/: CMakeLists.txt  package.xml
sgdrf_interfaces/msg/: CategoricalObservation.msg
sgdrf_interfaces/src/: main.cpp
sgdrf_interfaces/srv/: WordProb.srv  WordTopicMatrix.srv
src/sgdrf/: package.xml  setup.py
src/sgdrf/sgdrf/: sgdrf_node.py
src/sgdrf/sgdrf/sgdrf/: kernel.py  model.py  optimizer.py  subsample.py
src/sgdrf_interfaces/: CMakeLists.txt  package.xml
(+2 files in other folders)
