<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sgdrf</name>
  <version>0.0.0</version>
  <description>ROS 2 interface for SGDRFs</description>
  <maintainer email="jsansoucie@whoi.edu">John San Soucie</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>sgdrf_interfaces</depend>
  <depend>python3-pytorch-pip</depend>
  <depend>python3-pyro-ppl-pip</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
